# swagger.json
@@ -20,16 +20,13 @@
       }
     ],
     "components": {
-        "securitySchemes" : {
-          "BearerAuth": {
-            "type" : "http",
-            "schema" : "bearer",
-            "bearerFormat" : "JWT"
-          }
+      "securitySchemes" : {
+        "BearerAuth": {
+          "type" : "http",
+          "schema" : "bearer",
+          "bearerFormat" : "JWT"
         }
-    },
-    "security": {
-      "bearerAuth" : []
+      }
     },
     "info": {
       "title": "Customer API +",
@@ -89,7 +86,7 @@
           "security": {
             "bearerAuth" : []
           },
-           "responses": {
+          "responses": {
             "200": {
               "description": "Will send `Authenticated`"
             },
